--- a/.github/workflows/vite-github-pages-deploy.yml
+++ b/.github/workflows/vite-github-pages-deploy.yml
@@ -22,7 +22,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     environment:
-      name: demo
+      name: Deploy to Github Pages
       url: ${{ steps.deploy_to_pages.outputs.github_pages_url }}
     steps:
       - name: Checkout
